--- a/src/main/webapp/change_password.html
+++ b/src/main/webapp/change_password.html
@@ -27,74 +27,74 @@
 <!-- ==========================-->
 <!-- FULL SCREEN MENU-->
 <!-- ==========================-->
-<div class="wrap-fixed-menu" id="fixedMenu">
+<!--<div class="wrap-fixed-menu" id="fixedMenu">-->
 
 
-    <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
+    <!--<button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>-->
 
-    <nav class="fullscreen-center-menu">
+    <!--<nav class="fullscreen-center-menu">-->
 
-        <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-        <div id="dl-menu" class="dl-menuwrapper">
-            <ul class="dl-menu menu-item list-unstyled">
-
-
-                <li class="has-children ">
-                    <a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>
-                    <ul class="dl-submenu">
-
-                        <li><a href="home.html"><span>Home 1</span></a></li>
-                        <li><a href="home-2.html"><span>Home 2</span></a></li>
+        <!--&lt;!&ndash;左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;-->
+        <!--<div id="dl-menu" class="dl-menuwrapper">-->
+            <!--<ul class="dl-menu menu-item list-unstyled">-->
 
 
-                    </ul>
-                </li>
-                <li><a href="display.html"><span>about</span></a></li>
-                <li><a href="lookbook.html"><span>lookbook</span></a></li>
+                <!--<li class="has-children ">-->
+                    <!--<a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>-->
+                    <!--<ul class="dl-submenu">-->
 
-                <li>
-                    <a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>
-
-                    <ul class="dl-submenu">
-
-                        <li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>
-                        <li><a href="shop.html"><span>Catalog Grid 2</span></a></li>
-                        <li><a href="shop-2-list.html"><span>Catalog List</span></a></li>
-                        <li><a href="shop-single-1.html"><span>Product page 1</span></a></li>
-                        <li><a href="shop_single.html"><span>Product page 2</span></a></li>
-                        <li><a href="shop-single-3.html"><span>Product page 3</span></a></li>
-                        <li><a href="cart.html"><span>Cart page</span></a></li>
-                        <li><a href="checkout.html"><span>Checkout page </span></a></li>
-
-                    </ul>
-
-                </li>
+                        <!--<li><a href="home.html"><span>Home 1</span></a></li>-->
+                        <!--<li><a href="home-2.html"><span>Home 2</span></a></li>-->
 
 
-                <li class="has-children">
-                    <a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>
-                    <ul class="dl-submenu">
+                    <!--</ul>-->
+                <!--</li>-->
+                <!--<li><a href="display.html"><span>about</span></a></li>-->
+                <!--<li><a href="lookbook.html"><span>lookbook</span></a></li>-->
 
-                        <li><a href="blog-main.html"><span>Blog main</span></a></li>
-                        <li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>
-                        <li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>
-                        <li><a href="blog-post.html"><span>Blog post </span></a></li>
+                <!--<li>-->
+                    <!--<a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>-->
 
-                    </ul>
-                </li>
+                    <!--<ul class="dl-submenu">-->
 
-                <li><a href="typography.html"><span>typography</span></a></li>
-                <li><a href="contact.html"><span>contact</span></a></li>
+                        <!--<li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>-->
+                        <!--<li><a href="shop.html"><span>Catalog Grid 2</span></a></li>-->
+                        <!--<li><a href="shop-2-list.html"><span>Catalog List</span></a></li>-->
+                        <!--<li><a href="shop-single-1.html"><span>Product page 1</span></a></li>-->
+                        <!--<li><a href="shop_single.html"><span>Product page 2</span></a></li>-->
+                        <!--<li><a href="shop-single-3.html"><span>Product page 3</span></a></li>-->
+                        <!--<li><a href="cart.html"><span>Cart page</span></a></li>-->
+                        <!--<li><a href="checkout.html"><span>Checkout page </span></a></li>-->
+
+                    <!--</ul>-->
+
+                <!--</li>-->
 
 
-            </ul>
+                <!--<li class="has-children">-->
+                    <!--<a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>-->
+                    <!--<ul class="dl-submenu">-->
 
-        </div>
+                        <!--<li><a href="blog-main.html"><span>Blog main</span></a></li>-->
+                        <!--<li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>-->
+                        <!--<li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>-->
+                        <!--<li><a href="blog-post.html"><span>Blog post </span></a></li>-->
+
+                    <!--</ul>-->
+                <!--</li>-->
+
+                <!--<li><a href="typography.html"><span>typography</span></a></li>-->
+                <!--<li><a href="contact.html"><span>contact</span></a></li>-->
 
 
-    </nav>
+            <!--</ul>-->
 
-</div>
+        <!--</div>-->
+
+
+    <!--</nav>-->
+
+<!--</div>-->
 
 
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
@@ -123,46 +123,16 @@
         </button>
     </div>
     <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
-        <div class="container container-boxed-width">
-            <div class="top-bar">
-                <div class="container">
-                    <div class="header-topbarbox-1">
-                        <ul>
-                            <li>WE HELPING YOU: INFO@EXAMPLE.COM</li>
-                        </ul>
-                    </div>
-                    <div class="header-topbarbox-2">
-                        <ul class="social-links">
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-youtube-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-vimeo-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-twitter-square"></i></a>
-                            </li>
-                            <li class="li-last"><a href="/" target="_blank"><i
-                                    class="social_icons fa fa-tumblr-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <nav class="navbar" id="nav">
                 <div class="container">
                     <div class="header-navibox-1">
-                        <!-- Desctop Trigger Start-->
-                        <button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i
-                                class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>
-                        </button>
-                        <!-- Desctop Trigger End-->
                         <ul class="main-menu yamm nav navbar-nav">
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+                            <li><a><h5> </h5></a>
+                            </li>
+                            <li><a href="seller_login.html"><h5>商家入驻</h5></a>
+                            </li>
                             <li><a href="home.html"><h5>主 页</h5></a>
-                            </li>
-                            <li><a href="shop-1.html"><h5>加入我们</h5></a>
-                            </li>
-                            <li><a href="shop-1.html"><h5>商业合作</h5></a>
                             </li>
                         </ul>
                     </div>
@@ -171,12 +141,13 @@
                         <ul class="nav navbar-nav clearfix vcenter">
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
-                            <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
+                            <!--个人信息/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="display.html"><h5>个人信息</h5></a>
                             </li>
-                            <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">3</span></span>
+                            <li><span class="header-cart">
+                            <!--购物车///////////////////////////////////////////////////////////////////////////////////////-->
+                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                                    </span>
                             </li>
                         </ul>
                         <ul class="nav-language list-inline">
@@ -188,14 +159,12 @@
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="home.html">
-                            <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
+                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
                         </a>
                     </div>
                 </div>
             </nav>
-        </div>
     </header>
     <!-- end .header-->
     <div class="l-main-content l-main-content_w-border">
@@ -265,6 +234,9 @@
 
                                     </div>
                                 </div>
+
+
+
                                 <div class="col-2">
                                     <div class="woocommerce-shipping-fields">
                                         <h3>淘 不出掌心</h3>
@@ -272,11 +244,14 @@
                                             <label class="">这里放微淘的骚粉大LOGO</label>
                                             <!--LOGO模块/////////////////////////////////////////////////////////////-->
                                             <div style="width:500px ;height: 500px">
-                                        <img src="static/wt/images/pink.jpg">
+                                        <img src="static/images/WeTao_logo_big.jpg">
                                     </div>
                                         </p>
                                     </div>
                                 </div>
+
+
+
                             </div>
                             <div id="order_review" class="woocommerce-checkout-review-order">
 
@@ -306,8 +281,8 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice" id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -316,7 +291,8 @@
                     <div class="footer-main">
                         <div class="footer-contacts">
                             <div class="row">
-                                <div class="col-md-5"><span class="footer-contacts__item">tel.<a> 186 6666 6666</a></span>
+                                <div class="col-md-5"><span
+                                        class="footer-contacts__item">tel.<a> 186 6666 6666</a></span>
                                 </div>
                             </div>
                             <span class="btn-up" id="toTop"></span>
@@ -325,27 +301,25 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <ul class="footer-list list-unstyled">
-                                        <!--关于我们模块//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="blog1.html">About
-                                            Us</a>
+                                        <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
+                                        <li class="footer-list__item"><a href="seller_login.html" class="footer-list__link">商家入驻</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">brand</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="display.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -357,17 +331,20 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel
-                            ultrices velit. Etiam pellentesque nibh at quam facilisis, eu maximus dolor tincidunt. Cras
-                            porta luctus pretium. Nam posuere libero a neque rhoncus, eu
-                            viverra mauris volutpat. Integer at venenatis mi. Sed sagittis lobortis gravida. Phasellus
-                            ac finibus sem, et mattis dolor. Vestibulum vitae hendrerit urna, id volutpat magna.
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
+                            拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
+                            履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
+                            不掺杂使假、以假充真、以次充好；不生产销售有毒有害、失效、腐烂变质的食品和不合格的食品；<br>
+                            不使用不规范、不合格的计量器具销售商品；不销售应当检验、检疫而未检验、检疫的商品或检验、检疫不合格的商品；
+                            不销售国家明令禁止上市或淘汰的商品；
+                            不作虚假宣传，不误导消费者。
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
                                 class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__link"> Created by Cc</a>
                         </div>
                     </div>
                 </div>
@@ -411,4 +388,4 @@
 <script src="static/js/user.js"></script>
 </body>
 </html>
-<!--还没修改完-->
+<script type="text/javascript" src="static/jq/advice.js"></script>
