--- a/src/main/webapp/personal.html
+++ b/src/main/webapp/personal.html
@@ -22,77 +22,6 @@
 <div id="page-preloader"><span class="spinner border-t_second_b border-t_prim_a"></span>
 </div>
 <!-- Loader end-->
-<!-- ==========================-->
-<!-- FULL SCREEN MENU-->
-<!-- ==========================-->
-<div class="wrap-fixed-menu" id="fixedMenu">
-
-
-    <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
-
-    <nav class="fullscreen-center-menu">
-
-        <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-        <div id="dl-menu" class="dl-menuwrapper">
-            <ul class="dl-menu menu-item list-unstyled">
-
-
-                <li class="has-children ">
-                    <a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>
-                    <ul class="dl-submenu">
-
-                        <li><a href="home.html"><span>Home 1</span></a></li>
-                        <li><a href="home-2.html"><span>Home 2</span></a></li>
-
-
-                    </ul>
-                </li>
-                <li><a href="about.html"><span>about</span></a></li>
-                <li><a href="lookbook.html"><span>lookbook</span></a></li>
-
-                <li>
-                    <a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>
-
-                    <ul class="dl-submenu">
-
-                        <li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>
-                        <li><a href="shop-2.html"><span>Catalog Grid 2</span></a></li>
-                        <li><a href="shop-2-list.html"><span>Catalog List</span></a></li>
-                        <li><a href="shop-single-1.html"><span>Product page 1</span></a></li>
-                        <li><a href="shop-single-2.html"><span>Product page 2</span></a></li>
-                        <li><a href="shop-single-3.html"><span>Product page 3</span></a></li>
-                        <li><a href="cart.html"><span>Cart page</span></a></li>
-                        <li><a href="checkout.html"><span>Checkout page </span></a></li>
-
-                    </ul>
-
-                </li>
-
-
-                <li class="has-children">
-                    <a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>
-                    <ul class="dl-submenu">
-
-                        <li><a href="blog-main.html"><span>Blog main</span></a></li>
-                        <li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>
-                        <li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>
-                        <li><a href="blog-post.html"><span>Blog post </span></a></li>
-
-                    </ul>
-                </li>
-
-                <li><a href="typography.html"><span>typography</span></a></li>
-                <li><a href="contact.html"><span>contact</span></a></li>
-
-
-            </ul>
-
-        </div>
-
-
-    </nav>
-
-</div>
 
 
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
@@ -106,8 +35,9 @@
                     <div class="navbar-search">
                         <form class="search-global">
                             <input class="search-global__input" type="text" placeholder="Type to search"
-                                   autocomplete="off" name="s" value="">
-                            <button class="search-global__btn"><i class="icon stroke icon-Search"></i>
+                                   autocomplete="off" name="search" value="" id="search">
+                            <button class="search-global__btn" onclick="search2()"><i
+                                    class="icon stroke icon-Search"></i>
                             </button>
                             <div class="search-global__note">Begin typing your search above and press return to
                                 search.
@@ -117,83 +47,63 @@
                 </div>
             </div>
         </div>
-        <button class="search-close close" type="button"><i class="fa fa-times"></i>
-        </button>
+        <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
     </div>
     <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
-        <div class="container container-boxed-width">
-            <div class="top-bar">
-                <div class="container">
-                    <div class="header-topbarbox-1">
-                        <ul>
-                            <li>WE HELPING YOU: INFO@EXAMPLE.COM</li>
-                        </ul>
-                    </div>
-                    <div class="header-topbarbox-2">
-                        <ul class="social-links">
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-facebook-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-youtube-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-vimeo-square"></i></a>
-                            </li>
-                            <li><a href="/" target="_blank"><i class="social_icons fa fa-twitter-square"></i></a>
-                            </li>
-                            <li class="li-last"><a href="/" target="_blank"><i
-                                    class="social_icons fa fa-tumblr-square"></i></a>
-                            </li>
-                        </ul>
-                    </div>
+        <!--<div class="container con-->
+
+        <!--最顶部的的导航栏/////////////////////////////////////////////////////////////-->
+        <nav class="navbar" id="nav">
+            <div class="container">
+                <div class="header-navibox-1">
+                    <!-- Desctop Trigger Start-->
+                    <!--<button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i-->
+                    <!--class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>-->
+                    <!--</button>-->
+                    <!-- Desctop Trigger End-->
+                    <ul class="main-menu yamm nav navbar-nav">
+                        <!--主页入口///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="home.html"><h5>主 页</h5></a>
+                        </li>
+                        <!--售后入口///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="order_over.html"><h5>售 后</h5></a>
+                        </li>
+                        <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="collection.html"><h5>收 藏</h5></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="header-navibox-2">
+                    <ul class="nav navbar-nav clearfix vcenter">
+                        <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
+                        </li>
+                        <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li><a href="order.html"><h5>我 的 订 单</h5></a>
+                        </li>
+                        <li><span class="header-cart">
+
+                                <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
+                                    <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                                        </span>
+                        </li>
+                    </ul>
+                    <ul class="nav-language list-inline">
+                        <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
+                        <li><a href="display.html">个人信息</a>
+                        </li>
+                        <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
+                        <li class="active"><a href="login.html">注销</a>
+                        </li>
+                    </ul>
+                    <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
+                    <!--点击，重新进入主页/////////////////////////////////////////////////////////////-->
+                    <a class="navbar-brand scroll" href="home.html">
+                        <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                        <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+                    </a>
                 </div>
             </div>
-            <nav class="navbar" id="nav">
-                <div class="container">
-                    <div class="header-navibox-1">
-                        <!-- Desctop Trigger Start-->
-                        <button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i
-                                class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>
-                        </button>
-                        <!-- Desctop Trigger End-->
-                        <ul class="main-menu yamm nav navbar-nav">
-                            <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="shop-1.html"><h5>主 页</h5></a>
-                            </li>
-                            <li><a href="shop-1.html"><h5>加入我们</h5></a>
-                            </li>
-                            <li><a href="shop-1.html"><h5>商业合作</h5></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="header-navibox-2">
-                        <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
-                        <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
-                            </li>
-                            <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="#">个人信息</a>
-                            </li>
-                            <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">3</span></span>
-                            </li>
-                        </ul>
-                        <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="#">登陆</a>
-                            </li>
-                            <li><a href="#">返回</a>
-                            </li>
-                        </ul>
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
-                        <a class="navbar-brand scroll" href="home.html">
-                            <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="images/logo.png" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="images/logo.png" alt="logo">
-                        </a>
-                    </div>
-                </div>
-            </nav>
-        </div>
+        </nav>
     </header>
     <!-- end .header-->
     <div class="l-main-content l-main-content_w-border">
@@ -331,8 +241,10 @@
                     <section class="footer-section">
                         <h3 class="footer-section__title ui-title-inner">写 下 您 宝 贵 的 建 议</h3>
                         <form class="footer-form">
-                            <input class="footer-form__input form-control" type="email" placeholder="enter your advice">
-                            <button class="footer-form__btn"><i class="icon fa fa-paper-plane"></i>
+                            <input class="footer-form__input form-control" type="text" placeholder="enter your advice"
+                                   id="advice">
+                            <button class="footer-form__btn" onclick="sendAdvice()"><i
+                                    class="icon fa fa-paper-plane"></i>
                             </button>
                         </form>
                     </section>
@@ -341,7 +253,8 @@
                     <div class="footer-main">
                         <div class="footer-contacts">
                             <div class="row">
-                                <div class="col-md-5"><span class="footer-contacts__item">tel.<a> 186 6666 6666</a></span>
+                                <div class="col-md-5"><span
+                                        class="footer-contacts__item">tel.<a> 186 6666 6666</a></span>
                                 </div>
                             </div>
                             <span class="btn-up" id="toTop"></span>
@@ -351,32 +264,25 @@
                                 <div class="col-md-5">
                                     <ul class="footer-list list-unstyled">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="blog1.html">About
-                                            Us</a>
+                                        <li class="footer-list__item"><a href="seller_login.html"
+                                                                         class="footer-list__link">商家入驻</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Careers</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Careers</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link"
-                                                                         href="">International</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">International</a>
                                         </li>
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="privacy-policy.html">Privacy</a>-->
-                                        <!--</li>-->
-                                        <!--<li class="footer-list__item"><a class="footer-list__link"-->
-                                        <!--href="terms-of-use.html">Terms</a>-->
-                                        <!--</li>-->
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
                                     <ul class="footer-list list-unstyled">
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Contact</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Contact</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Returns</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Returns</a>
                                         </li>
-                                        <li class="footer-list__item"><a class="footer-list__link" href="">Warranty</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Warranty</a>
                                         </li>
                                         <!--帮助入口//////////////////////////////////////////////////////////////////////////////-->
-                                        <li class="footer-list__item"><a class="footer-list__link" href="about.html">Help</a>
+                                        <li class="footer-list__item"><a class="footer-list__link">Help</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -388,17 +294,20 @@
             <div class="footer-btm">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="footer-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel
-                            ultrices velit. Etiam pellentesque nibh at quam facilisis, eu maximus dolor tincidunt. Cras
-                            porta luctus pretium. Nam posuere libero a neque rhoncus, eu
-                            viverra mauris volutpat. Integer at venenatis mi. Sed sagittis lobortis gravida. Phasellus
-                            ac finibus sem, et mattis dolor. Vestibulum vitae hendrerit urna, id volutpat magna.
+                        <div class="footer-info">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            我们用心服务每一位用户，诚信经营每一件商品，严格的审核商家进驻本平台。<br>
+                            拒绝并抵制假冒伪劣产品的出现与售卖。从自身做起，树立诚信，向假冒伪劣产品宣战，自觉接受相关部门的监督管理和接受广大消费者的监督。
+                            履行经营者的义务，保证所生产经销的商品符合保障人身财产安全的要求和商品应当具有的质量和使用性能；<br>
+                            不掺杂使假、以假充真、以次充好；不生产销售有毒有害、失效、腐烂变质的食品和不合格的食品；<br>
+                            不使用不规范、不合格的计量器具销售商品；不销售应当检验、检疫而未检验、检疫的商品或检验、检疫不合格的商品；
+                            不销售国家明令禁止上市或淘汰的商品；
+                            不作虚假宣传，不误导消费者。
                         </div>
                     </div>
                     <div class="col-md-6 col-md-offset-2">
                         <div class="copyright"><span
-                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span><a
-                                class="copyright__link" href="home.html"> Created by Cc</a>
+                                class="copyright__main">©  2018 WeTao  ® All Right Reserved</span>
+                            <a class="copyright__link"> Created by Cc</a>
                         </div>
                     </div>
                 </div>
@@ -453,3 +362,4 @@
 </html>
 
 
+<script type="text/javascript" src="static/jq/advice.js"></script>
