注册默认头像修改

--- a/src/main/webapp/personal.html
+++ b/src/main/webapp/personal.html
@@ -354,7 +354,7 @@
 <script type="text/javascript">
     $(function () {
         var uId=getId();
-        document.getElementById("uuId").innerHTML=uId+"的用户";
+        document.getElementById("uuId").innerHTML=uId+"用户";
         personal(uId);
     })
 </script>
