'商家添加商店js修复'

--- a/src/main/webapp/store_add.html
+++ b/src/main/webapp/store_add.html
@@ -212,7 +212,7 @@
                                 <div id="payment" class="woocommerce-checkout-payment">
                                     <div class="form-row place-order">
                                         <!--确认按钮////////////////////////////////////////////////-->
-                                        <input type="button" class="button alt" value="确 认 Save" onclick="onAdd1()"
+                                        <input type="button" class="button alt" value="确 认 Save" onclick="storeOnAdd1()"
                                                data-value="Place order"style="line-height:1.3;border:0"/>
                                     </div>
                                     <div class="form-row place-order">
