修改商家页面

--- a/src/main/webapp/Store.html
+++ b/src/main/webapp/Store.html
@@ -153,7 +153,7 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -360,6 +360,7 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/jq/store.js"></script>
+<script src="static/js/seller.js"></script>
 
 </body>
 
