--- a/src/main/webapp/seller_evaluation.html
+++ b/src/main/webapp/seller_evaluation.html
@@ -173,7 +173,7 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">返 回</a>
+                            <li><a onclick="exit()">退出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -376,6 +376,7 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/jq/showitems.js"></script>
+<script src="static/js/seller.js"></script>
 </body>
 
 </html>
