'更换登陆首页logo'

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -70,10 +70,6 @@
                         <ul class="nav navbar-nav clearfix vcenter">
                             <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                             </li>
-                            <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <!--<li><a href="#">个人信息</a>-->
-                            <!--</li>-->
-                            <li><span class="header-cart">
 
                             <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
                                 <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
@@ -165,7 +161,7 @@
                                             <!--右侧图标位置/////////////////////////////////////////////////////////////-->
                                             <a class="b-goods__media js-zoom-images"
                                                href="assets/media/content/goods/group-4/2.jpg">
-                                                <img class="img-responsive" width="300" height="300" src="static/wt/images/pink.jpg" alt="img">
+                                                <img class="img-responsive" width="300" height="300" src="static/wt/images/WeTao_logo_big.jpg" alt="img">
                                             </a>
                                         </p>
                                     </div>
