--- a/src/main/webapp/Unfilled-Order.html
+++ b/src/main/webapp/Unfilled-Order.html
@@ -142,7 +142,7 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="#"><h5>客服</h5></a></li>
+                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
@@ -155,7 +155,7 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -366,6 +366,7 @@
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/order.js"></script>
 <script src="static/js/order_detail.js"></script>
+<script src="static/js/seller.js"></script>
 <script>
     $(function () {
         getorder1(1);
