--- a/src/main/webapp/items_manage.html
+++ b/src/main/webapp/items_manage.html
@@ -141,7 +141,7 @@
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="#"><h5>客服</h5></a></li>
+                            <li><a href="sellerService.html"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
@@ -152,9 +152,9 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="seller_login_register.html">登 陆</a>
+                            <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -527,6 +527,7 @@
 </script>
 <script src="static/jq/manageItems.js"></script>
 <script src="static/jq/tool.js"></script>
+<script src="static/js/seller.js"></script>
 <script  type="text/javascript">
     $(function () {
         var id=getQueryString("iId")
