--- a/src/main/webapp/Detail-Order.html
+++ b/src/main/webapp/Detail-Order.html
@@ -201,12 +201,12 @@
                                 	<table class="table table_primary" style="width:80%">
                                     	<thead>
                                         	<tr>
-                                                <th style="width:130px">订单号</th>
+                                                <th style="width:200px">图片</th>
+                                                <th style="width:150px">商品Id</th>
                                                 <th style="width:150px">商品名</th>
-                                                <th style="width:150px">店铺名</th>
-                                                <th style="width:100px">图片</th>
                                                 <th style="width:130px">单价</th>
-                                                <th style="width:130px">数量</th>                                             
+                                                <th style="width:130px">数量</th>
+                                                <th style="width:130px">店铺名</th>
                                              </tr>
                                          </thead>
                                        	 <tbody id="order_details">
