--- a/src/main/webapp/order_eva_detail.html
+++ b/src/main/webapp/order_eva_detail.html
@@ -136,7 +136,7 @@
                                 <table class="shop_table shop_table_responsive cart table" cellspacing="0">
                                     <thead>
                                     <tr>
-                                        <td class="product-thumbnail">&nbsp;</td><!--产品图片-->
+                                        <td class="product-thumbnail">产 品 图 片&nbsp;</td><!--产品图片-->
                                         <td class="product-subtotal"><h5>订 单 号</h5></td>
                                         <td class="product-name"><h5>产 品 名</h5></td>
                                         <td class="product-name"><h5>单 价</h5></td>
