注销按钮修改和注册js修改

--- a/src/main/webapp/order.html
+++ b/src/main/webapp/order.html
@@ -89,7 +89,7 @@
                             <li><a href="display.html">个人信息</a>
                             </li>
                             <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li class="active"><a href="login.html">注销</a>
+                            <li class="active"><a onclick="exit()">注销</a>
                             </li>
                         </ul>
                         <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
