--- a/src/main/webapp/cart.html
+++ b/src/main/webapp/cart.html
@@ -84,7 +84,7 @@
                         <li><a href="display.html">个人信息</a>
                         </li>
                         <!--退出按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li class="active"><a href="login.html">quit</a>
+                        <li class="active"><a onclick="exit()">注销</a>
                         </li>
                     </ul>
                     <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
@@ -254,6 +254,7 @@
 <script src="static/wt/js/main.js"></script>
 <!-- Main slider-->
 <script src="static/wt/js/jquery.sliderPro.min.js"></script>
+<script src="static/js/user.js"></script>
 </body>
 
 </html>
