--- a/src/main/webapp/collection.html
+++ b/src/main/webapp/collection.html
@@ -164,7 +164,7 @@
                             <li><a href="display.html">个人信息</a>
                             </li>
                             <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                            <li class="active"><a href="login.html">注销</a>
+                            <li class="active"><a onclick="exit()">注销</a>
                             </li>
                         </ul>
                         <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
@@ -348,6 +348,7 @@
 <script src="static/wt/js/main.js"></script>
 <!-- Main slider-->
 <script src="static/wt/js/jquery.sliderPro.min.js"></script>
+<script src="static/js/user.js"></script>
 </body>
 
 </html>
